@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.216 2005/02/12 10:59:20 rillig Exp $
+# $NetBSD: Makefile,v 1.217 2005/02/12 21:34:47 rillig Exp $
 #
 
-DISTNAME=	pkglint-4.02
+DISTNAME=	pkglint-4.03
 CATEGORIES=	pkgtools devel
 MASTER_SITES=	# empty
 DISTFILES=	# empty
